--- a/index.html
+++ b/index.html
@@ -182,6 +182,6 @@ document.write('<a href=JavaScript:mail_to("","")><img src="img/mail.png" alt="æ
               </div>
               <!--/wrapper--></div>
               <script src="http://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
-              <script src="https://undertreem.github.io/Portfolio/js/particle.js"></script>
+              <script src="js/particle.js"></script>
             </body>
             </html>
