--- a/index.html
+++ b/index.html
@@ -36,6 +36,14 @@
 
             <!--新着情報-->
             <dl class="info">
+              <dt><time>2021.11.16</time></dt>
+              <dd><a href="https://japan.aes-student.org/wordpress/archives/1628"target="_blank" rel="noopener">
+                11月23日にAES若手フォーラムにて発表を行います</a></dd>
+
+                <dt><time>2021.11.14</time></dt>
+                <dd><a href="https://digigame-expo.org/webcatalog/dg21/#c78"target="_blank" rel="noopener">
+                  デジゲー博に作品を出展しました</a></dd>
+
               <dt><time>2021.9.30</time></dt>
               <dd><a href="https://www.teu.ac.jp/gameshow2021/index.html"target="_blank" rel="noopener">
                 東京ゲームショウ2021に作品を出展しました</a></dd>
