--- a/index.html
+++ b/index.html
@@ -67,13 +67,13 @@
                     <p>　東京工科大学　メディア学部</p>
                       　大学ではゲームにおけるコンテンツ表現（特にゲームサウンド）に力を入れて学んできました。<br>
                         <div class="str">「なにかを新しく生み出すこと」</div>が大好きで、プログラミング、効果音制作、作曲、グラフィックデザイン、映像、プロダクトデザインなどなど…様々なクリエイティブ活動に挑戦してきました。
-                      現在はサウンドプログラミングやサラウンド環境の実装について学習しています。<br>
-                      <p>　TGS2021に出展したゲームでは、それまでの経験を活かし、サウンドアセットの制作・サウンドミドルウェアを用いた実装を担当。シェーダーやグラフィックス パイプライン整備も担当(テクニカルアーティスト分野)しました。</p>
+                      現在は<div class="str">音のテクニカルアーティスト</div>を目指し、サウンドプログラミングや立体音響の実装について日々学習・研究しています。<br>
+                      <p>　TGS2021に出展したゲームでは、これまでの経験を活かし、サウンドアセットの制作・サウンドミドルウェアを用いた実装を担当。シェーダー制作やグラフィックス パイプライン整備も担当しました。</p>
                       <p>　ゲームをプレイすることが好きで、スマホタイトルも含め過去300作品ほどプレイしています。他にも、映画を年間200本程度観るなどコンテンツに貪欲に接しています。
                       </p>
 
                     <main>
-                    <div class = "imglink" ><a href="https://github.com/undertreem" target="_blank" rel="noopener"><img src="img/GitHub-Mark-Light-120px-plus.png" alt="次へ"></a></div>
+                    <div class = "imglink" ><a href="https://qiita.com/undertreem" target="_blank" rel="noopener"><img src="img/Qiita.png" alt="次へ" width="600" height="200"></a></div>
                     <div class = "imglink" ><a href="https://www.facebook.com/lingximuxia" target="_blank" rel="noopener"><img src="img/facebook.png" alt="次へ"></a></div>
                     <div class = "imglink" ><script type="text/javascript">
 <!--
